--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
      404 Page not found &middot;  Myanmar Kubernetes User Group
   </title>
 
-    <meta name="description" content="this is my description" />
+    <meta name="description" content="" />
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -73,7 +73,7 @@
             &nbsp;
             
             <h1 class="page-title">Myanmar Kubernetes User Group</h1>
-            <h2 class="page-description">this is my description</h2>
+            <h2 class="page-description"></h2>
         </div>
     </div>
     <a class="scroll-down icon-arrow-left" href="#content"><span class="hidden">Scroll Down</span></a>
